--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,18 @@ button {
     padding: 0;
     border: none;
 }
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    overflow: hidden;
+}
 .section {
 padding: 120px 0;
 }
@@ -48,8 +60,7 @@ header {
 }
 .container {
     width: 1158px;
-    /* padding-left: 156px;
-    padding-right: 156px; */
+padding: 0 15px 0 15px;
     margin-left: auto;
     margin-right: auto; 
 }
@@ -105,6 +116,7 @@ margin-right: 40px;
         line-height: 1.5;
         font-weight: 500;
         letter-spacing: 0.02em;
+        padding: 24px 0 24px;
 }
 .nav-item:hover, .nav-item:focus, .nav-item:active, .address-link
  {
@@ -130,6 +142,7 @@ margin-right: 40px;
 .hero {
     background-color: #2E2F42;
     width: 1440px;
+    padding: 188px 0;
 }
 
 .hero-title {
@@ -140,6 +153,7 @@ margin-right: 40px;
         font-weight: 700;
         line-height: 1.07;
         letter-spacing: 0.02em;
+        max-width: 496px;
 }
 .hero-btn {
     background-color: #4D5AE5;
@@ -148,10 +162,17 @@ margin-right: 40px;
         font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.04em;
+        display: block;
+        min-width: 169px;
+        height: 56px;
+        border-radius: 4px;
     
 }
  .hero-btn:hover, .hero-btn:focus, .hero-btn:active {
     background-color: #404BBF; 
+}
+.advantages-title {
+
 }
 .advantages-list {
     display: flex;
@@ -187,18 +208,22 @@ margin-right: 24px;
 .our-team-list {
     display: flex; 
 }
+.our-team-item {
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
+}
 .our-team-item-bottom {
-    padding: 32px 16px;
+    padding: 32px 0 32px;
     text-align: center;
 }
+
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    row-gap: 48px;
 }
-.portfolio-item {
-    width: calc((100% - 48px) / 3);
-}
+
+
 .portfolio-item-bottom {
     display: block;
     width: 360px;
@@ -209,13 +234,18 @@ margin-right: 24px;
 }
 .footer {
     background-color: #2E2F42;
-    padding: 100px;
+    padding: 100px 0 100px;
 
 }
 .footer>.text {
+    
     color: #F4F4FD;
 }
 .footer>.logo-text {
+    margin-bottom: 16px;
+}
+.footer-link {
+    display: inline-block;
     margin-bottom: 16px;
 }
 .text-footer {
