--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ padding: 0 15px 0 15px;
         align-items: center;
 }
 
-.nav {
+.navigation {
     display: flex;
         align-items: center;
 }
