--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,6 @@ padding: 120px 0;
 .section-header {
     border-bottom: 1px solid #E7E9FC;
     background: #FFF;
-    padding: 24px 156px;
 
 }
 .container {
@@ -73,11 +72,11 @@ padding: 0 15px 0 15px;
 .navigation {
     display: flex;
         align-items: center;
+        margin-right: auto;
 }
 .nav-list {
     display: flex;
     justify-content: space-between;
-    margin-right: 232px;
 }
 .nav-list-item:not(:last-child) {
 margin-right: 40px;
@@ -118,6 +117,7 @@ margin-right: 40px;
         font-weight: 500;
         letter-spacing: 0.02em;
         padding: 24px 0 24px;
+        display: block;
 }
 .nav-item:hover, .nav-item:focus, .nav-item:active, .address-link
  {
@@ -142,7 +142,6 @@ margin-right: 40px;
 }
 .hero {
     background-color: #2E2F42;
-    width: 1440px;
     padding: 188px 0;
 }
 
@@ -155,6 +154,9 @@ margin-right: 40px;
         line-height: 1.07;
         letter-spacing: 0.02em;
         max-width: 496px;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 48px;
 }
 .hero-btn {
     background-color: #4D5AE5;
@@ -167,6 +169,8 @@ margin-right: 40px;
         min-width: 169px;
         height: 56px;
         border-radius: 4px;
+        margin-right: auto;
+        margin-left: auto;
     
 }
  .hero-btn:hover, .hero-btn:focus, .hero-btn:active {
@@ -228,9 +232,8 @@ margin-right: 24px;
 
 
 .portfolio-item-bottom {
-    display: block;
-    width: 360px;
-    border-bottom: 1px solid #E7E9FC;
+    border: 1px solid #E7E9FC;
+    border-top: none;
         background: #FFF;
     padding: 32px 16px;
 }
